Fixed alignment of images and text for teas

--- a/TeaCozy/style.css
+++ b/TeaCozy/style.css
@@ -6,6 +6,12 @@ body {
     
 }
 
+.flex-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
 header {
     width: 100%;
     height: 69px;
@@ -65,4 +71,14 @@ nav span {
 #featured-tea img {
     width: 300px;
     height: 200px;
+}
+
+.item img {
+    display: block;
+    margin: 10px;
+}
+
+.item span {
+    display: block;
+    padding: 5px;
 }
